RESOLVED FIXED34271
Stub is missing for AXObjectCache::contentChanged when HAVE(ACCESSIBILITY) is not defined
https://bugs.webkit.org/show_bug.cgi?id=34271
Summary Stub is missing for AXObjectCache::contentChanged when HAVE(ACCESSIBILITY) is...
Steve Block
Reported 2010-01-28 09:41:13 PST
No stub is provided for AXObjectCache::contentChanged for when HAVE(ACCESSIBILITY) is not defined. This causes link errors in Element::updateAfterAttributeChanged and RenderText::setText on Android, where this method is used unguarded. This was introduced in http://trac.webkit.org/changeset/52786
Attachments
Patch (1.99 KB, patch)
2010-01-28 10:25 PST, Steve Block
no flags
Steve Block
Comment 1 2010-01-28 10:25:21 PST
WebKit Commit Bot
Comment 2 2010-01-28 20:27:41 PST
Comment on attachment 47627 [details] Patch Clearing flags on attachment: 47627 Committed r54041: <http://trac.webkit.org/changeset/54041>
WebKit Commit Bot
Comment 3 2010-01-28 20:27:46 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.