2010-01-28  Steve Block  <steveblock@google.com>

Reviewed by David Levin.

        Add stub for AXObjectCache::contentChanged when HAVE(ACCESSIBILITY) is not defined
        https://bugs.webkit.org/show_bug.cgi?id=34271

        No new tests, build fix only.

        * accessibility/AXObjectCache.cpp: Modified. Added HAVE(ACCESSIBILITY) guards around contentChanged
        * accessibility/AXObjectCache.h: Modified.
        (WebCore::AXObjectCache::contentChanged): Added stub

Canonical link: https://commits.webkit.org/45408@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54041 268f45cc-cd09-0410-ab3c-d52691b4dbfc