WebCore/accessibility/AXObjectCache.h
@@ -152,6 +152,7 @@ inline void AXObjectCache::postNotification(RenderObject*, AXNotification, bool 
 inline void AXObjectCache::postPlatformNotification(AccessibilityObject*, AXNotification) { }
 inline void AXObjectCache::handleFocusedUIElementChanged(RenderObject*, RenderObject*) { }
 inline void AXObjectCache::handleScrolledToAnchor(const Node*) { }
+inline void AXObjectCache::contentChanged(RenderObject*) { }
 #endif
 
 }
